# Ci-CD2

./: Dockerfile  docker-compose.yml  pyproject.toml  tempo.yaml
.github/workflows/: build.yml  deploy.yml  linter.yml  tests.yml
app/: main.py
app/api/endpoints/: items.py  users.py
app/core/: config.py
prometheus/: prometheus.yml
requirements/: reqs.txt
